--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body class="bg-gray-100">
   <header class="bg-primary text-white py-4">
     <div class="container mx-auto px-4 text-center">
-      <h1 class="text-2xl font-bold"><i class="fa fa-radio mr-2"></i>BD7RC的QSL卡展示</h1>
+      <h1 class="text-2xl font-bold"><i class="fa fa-radio mr-2"></i>BD7PRC的QSL卡展示</h1>
       <p class="text-sm mt-1">BD7PRC's QSL card display</p>
     </div>
   </header>
