--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
     function toggleProxyDropdown() {
       const dropdown = document.getElementById('proxy-dropdown');
       dropdown.classList.toggle('hidden');
+	  console.log("感谢互联网的开源和无私奉献精神——BH7GZB");
     }
 
     // 更改代理设置
